# altwebgen

./: .gitignore  Cargo.toml  Dockerfile  README.md  setup.sh
.github/workflows/: action-deploy.yml  action-test.yml
examples/: regex.rs  transcript.rs  words.rs
examples/iterate/: main.rs
gh-pages/: build.sh  index_content.md
gh-pages/content/_website/: index.html
gh-pages/content/source/: index.md
gh-pages/files/markdown/: index.md
samples/basic/source/: index.html
samples/basic/source/style/: main.css
samples/markdown/source/: hypertext.md  index.md  memex.md  nelson.md
samples/markdown/template/: default.hbs  home.hbs
samples/markdown/template/layout/: default.hbs
samples/md-audio/ref/: as-we-may-think-6.md  as-we-may-think-6.transcript.json
samples/md-audio/source/: index.html.hbs
samples/md-audio/template/: _livereload.hbs
samples/media/: README.md
samples/media/ref/: as-we-may-think-6.transcript.json  hypertext.html.hbs  hypertext.md  memex-quote.md  memex-quote.transcript.json
samples/media/source/: audio.css  index.html.hbs  index.md.hbs  memex.html.hbs  two.md.hbs  words.md.hbs
samples/media/source/ref/: hypertext.md  hypertext.transcript.json
samples/media/template/: _audioplayback.hbs  _livereload.hbs  default.hbs  words.hbs
samples/ref/template/: default.hbs
samples/sidebar/: meta.yaml
samples/sidebar/source/: index.html  index.html.hbs  item_one.html.hbs
samples/sidebar/template/: default.hbs  layout_original.hbs  toc.hbs
samples/sidebar/templates/: _head.hbs  index.hbs  layout.hbs  theme.js.hbs  theme_setup.hbs  theme_sidebar_layout.hbs
source/: index.html  test.html
source/style/: test.css
src/: config.rs  devserve.rs  lib.rs  main.rs  ref2md.rs  setup.rs  transcript.rs  watch.rs  web.rs
src/config/: mod.rs  mode.rs  transcript.rs
src/devserve/: log.rs  mod copy.rs  mod.rs  watch.rs  ws.rs
src/test/data/: short-sentence-multiline.md  short-sentence-no-punctuation.md  short-sentence.json  short-sentence.md  short-sentence.transcript.json  var.md.hbs
src/test/sample-audio/source/: index.md.hbs
src/test/sample-audio/template/: default.hbs
src/test/sample-template/source/: index.md
src/test/sample-template/template/: default.hbs
src/test/sample-template/template/theme/: theme.css
src/util/: mod.rs  node_ref.rs  path.rs
src/watch/: mod.rs  watch_files.rs
src/web/: document.rs  framework.rs  md.rs  mod.rs  template.rs
src/web/audio/: mod.rs  whisperx.rs
src/web/md/: mod.rs  ref_markdown.rs
src/web/words/: README.md  mod.rs
src/web/words/examples/: regex.rs  transcript.rs  words.rs
src/web/words/examples/iterate/: README.md  main.rs  sonnet43.transcript.json
src/web/words/src/: lib.rs  main.rs
src/web/words/testdata/: hypertext.transcript.json
src/words/: Cargo.toml  README.md  mod.rs
src/words/examples/: words.rs
src/words/src/: main.rs  transcript.rs
transcript-converter/: README.md  output.json  output1.json  transcriptConverter.py
