[package]
name = "altwebgen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
futures-util = "0.3.30"
handlebars = {version="5.1.0", features = ["dir_source"]}
http-body-util = "0.1.0"
matter = "0.1.0-alpha4"
mime = "0.3.17"
# new_mime_guess = {version = "4.0.1", features=["phf-map"]}
new_mime_guess = {version = "4.0.1"}
notify = "6.1.1"
notify-debouncer-mini = { version = "0.4.1", default-features = false }
pulldown-cmark = "0.10.0"
serde = "1.0.197"
serde_yaml = "0.9.34"
tokio = {version="1.36", features = ["macros", "rt-multi-thread"]}
tokio-util = "0.7.10"
tower-http = {version="0.5.2", features = ["fs"]}
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.5.0"
warp = "0.3.6"
