[package]
name = "altwebgen"
version = "0.3.2"
edition = "2021"

[[bin]]
name = "altwebgen"
path = "src/main.rs"

[lib]
name = "altwebgen"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
axum = "0.8.4"
bareurl = {git = "https://github.com/ultrasaurus/axum-serving-static-files.git", branch="lib"}
clap = {version = "4.5", features = ["derive"]}
futures-util = "0.3.30"
handlebars = {version="5.1.0", features = ["dir_source"]}
http-body-util = "0.1.0"
kuchikiki = "0.8.2"
markup5ever = "0.11.0"  # downgraded to align with kuchikiki
matter = "0.1.0-alpha4"
mime = "0.3.17"
# new_mime_guess = {version = "4.0.1", features=["phf-map"]}
new_mime_guess = {version = "4.0.1"}
notify = "8.0.0"
pulldown-cmark = "0.10.0"
regex = "1.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.48"
serde_yaml = "0.9.34"
tokio = {version="1.36", features = ["macros", "rt-multi-thread"]}
tokio-util = "0.7.10"
tower-http = {version="0.5.2", features = ["fs"]}
tower-livereload = "0.9.6"
tracing = "0.1"
tracing-subscriber = "0.3"
walkdir = "2.5.0"
warp = "0.3.6"

[dev-dependencies]
test-log = "0.2.17"
